#1.0.0 Update: Cabinets and cupboards